<resources>
    <string name="app_name">Covid-19</string>
    <string name="Menu_Title">Covid-19: Medidor de Gravidade</string>
    <string name="Menu_button">Iniciar</string>
    <string name="Sintomas_Descricao">Descrição dos Sintomas</string>
    <string name="Sintomas_principais">"Principais Sintomas "</string>
    <string name="Sintomas_ex1">Exemplo: Tosse</string>
    <string name="Sintomas_Secundarios">Sintomas Secundarios</string>
    <string name="Sintomas_ex2">Exemplo: Fadiga</string>
    <string name="Sintoma_p1">Sintoma 1</string>
    <string name="Sintoma_p2">Sintoma 2</string>
    <string name="Sintoma_p3">Sintoma 3</string>
    <string name="Button_next">Proximo</string>
    <string name="s1">Tosse</string>
    <string name="s2">Febre</string>
    <string name="s4">Dores Musculares</string>
    <string name="s3">Dificuldades respiratorias</string>
    <string name="s5">Cansaço Anormal</string>
    <string name="s6">Congestão Nasal</string>
    <string name="s7">Garganta Inflamada</string>
    <string name="s8">Perda do Olfato ou Paladar</string>
    <string name="s9">Diarreia</string>
    <string name="dfSpinner">-- Introduza um Sintoma --</string>
    <string name="int_sin">Introduzir Sintomas:</string>
    <string name="int_dcronica">Introduzir Doença Cronica:</string>
    <string name="button_sintomas">Sintomas</string>
    <string name="Button_dCronicas">Doenças Cronicas</string>
    <string name="DCronicas_Descricao">Descrição de Doenças Cronicas</string>
    <string name="doenca_cronica">Doença Cronicas</string>
    <string name="DC1">doença cardíaca</string>
    <string name="DC2">doença pulmonar</string>
    <string name="DC3">doença oncológica</string>
    <string name="DC4">hipertensão arterial</string>
    <string name="DC5">diabetes</string>
    <string name="LOCAL">Local</string>
    <string name="buttonVerData">Ver Data</string>
    <string name="Avaliar">Avaliação</string>
    <string name="Insert">Inserir</string>
    <string name="Update">Editar</string>
    <string name="delete">Eliminar</string>
    <string name="Street">Rua:</string>
    <string name="TipoU">Tipo de Unidade:</string>
    <string name="DistritoA">Distrito:</string>
    <string name="CLocal">Inserir Local</string>
    <string name="Nome_">Nome:</string>
    <string name="C_Obrigatorio">Required field!</string>
</resources>
