<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:hint="@string/LOCAL"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_height="267dp"
                android:layout_marginTop="16dp"
                app:srcCompat="@drawable/portugal" />

            <Button
                android:id="@+id/button4"
                android:layout_width="96dp"
                android:layout_height="39dp"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal"
                android:hint="@string/buttonVerData" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:hint="@string/Avaliar"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="206dp"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/gettyimages_1212213054" />

            <Button
                android:id="@+id/button5"
                android:layout_width="86dp"
                android:layout_height="39dp"
                android:layout_marginTop="8dp"
                android:layout_gravity="center_horizontal"
                android:hint="@string/Menu_button" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>