<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CriarLocal">

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/Insert"
        android:onClick="NewLocal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nestedScrollView" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="137dp"
        android:layout_height="30dp"
        android:layout_marginTop="24dp"
        android:hint="@string/CLocal"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="327dp"
        android:layout_height="412dp"
        android:layout_marginTop="8dp"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="274dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TextInputEditTextNome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Nome_" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/TextInputEditTextRua"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Street" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView18"
                            android:layout_width="match_parent"
                            android:layout_height="111dp"
                            android:layout_weight="1"
                            android:hint="@string/DistritoA"
                            android:textSize="18sp" />

                        <Spinner
                            android:id="@+id/spinnerDistrito"
                            android:layout_width="match_parent"
                            android:layout_height="133dp"
                            android:layout_weight="1" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1">

                            <TextView
                                android:id="@+id/textView19"
                                android:layout_width="match_parent"
                                android:layout_height="0.1dp"
                                android:layout_weight="1"
                                android:hint="@string/TipoU"
                                android:textSize="18sp" />

                            <Spinner
                                android:id="@+id/spinnerTipo"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </com.google.android.material.textfield.TextInputLayout>
                </com.google.android.material.textfield.TextInputLayout>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>